login and signup api with exceed limit and user blocking

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 # Reduce logging level to make sure the application works with SAM local
 # https://github.com/awslabs/aws-serverless-java-container/issues/134
 logging.level.root=INFO
-server.port=9191
+server.port=9192
 
 ## database configuration
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/Authdata
+spring.datasource.url=jdbc:postgresql://localhost:5432/authdata
 spring.datasource.username=postgres
 spring.datasource.password=Xr@123
 spring.jpa.hibernate.ddl-auto=update
