--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ server.port=9192
 
 ## database configuration
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/authdata
+spring.datasource.url=jdbc:postgresql://localhost:5432/Authdata
 spring.datasource.username=postgres
 spring.datasource.password=Xr@123
 spring.jpa.hibernate.ddl-auto=update
