--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,7 @@ spring.datasource.username=postgres
 spring.datasource.password=Xr@123
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+
+## JWT
+app.jwtSecret=SecretKey
+app.jwtExpirationInMs=604800000
